# vcpkg-cmake-gl-example

./: CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  glutil.cpp  main.cpp
src/include/: glutil.h
